@@ -263,6 +263,8 @@ Release 0.8.0 - unreleased
 
   BUG FIXES
 
+    TAJO-640: In inner join clause, empty table can cause a error by order-by clause. (jaehwa)
+
     TAJO-635: Improve tests of query semantic verification. (hyunsik)
 
     TAJO-620: A join query can cause IndexOutOfBoundsException if one of tables is empty. (jaehwa)
